fixed varius bugs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lnag = "en">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Angel's Bakery- Homemade Cakes </title>
@@ -10,23 +10,22 @@
 
 <body>
 	<div id="wrapper">
+		
 		<div id="header">
-			<h1>Welcome to Angel's Cakes</h1>
-		</div>
-		<hr>
-
+		<h1>  Welcome to Angel's Cakes</h1>
+	</div> <!--closes header -->
+		
 		<div id="nav">
-			
-			<div id="navli">
+
 				<a href="index.html"> Home Page</a> |
 				<a href="prices.html"> Cake Pricing</a> |
 				<a href="designs.html"> Design Your Cake</a> |
 				<a href="pictures.html"> Designs</a> |
-				<a href="mailto:"> Eamil us</a> |
-				<a href="tel:+14083829733"> Phone</a> |
+				<a href="mailto:angelbakery03@gmail.com"> Eamil us</a> |
+				<a href="tel:+14085948852"> Phone</a> |
 				<a href="https://www.facebook.com/angelscakes33/" target="_blank" title="check our the facebook page"> Facebook</a> |
-				<a href="https://www.youtube.com/channel/UCoWCyywy2edneSz54sTQEmQ" target="_blank" title="check out my youtube channel for tutorials"> Youtube</a> 
-			</div> <!-- closes navli -->
+				<a href="https://www.youtube.com/channel/UCoWCyywy2edneSz54sTQEmQ" target="_blank" title="check out my youtube channel for tutorials"> Youtube</a>
+				<hr> 
 		</div> <!-- closes nav -->
 
 		<div class="fltright"><img src="cakes-pics/1098.jpg" alt="red and black Angels Cakes Logo"></div>
@@ -40,8 +39,10 @@
 
 			<p>Want to see more designs  to convince yourself? <a href="https://www.facebook.com/angelscakes33/" target="_blank" title="visit my Facebook page"> Facebook</a>, or <a href="https://www.youtube.com/channel/UCoWCyywy2edneSz54sTQEmQ" target="_blank" title="visit my Youtube channel for tutorials"> Youtube </a> This way you can check out our work and see for yourself what I can't show you. perhaps you can also learn to do it yourself</p>
 		</div> <!-- closes content -->
-		<div id="footer"> Copyright &copy; All Rights Reserved 2020 <br> Luis Mendoza </div>
+	
+	<div id="clear"></div>
+	<div id="footer"> Copyright &copy; All Rights Reserved 2020 <br> Luis Mendoza </div>
 	</div> <!-- closes wrapper -->
-
+	
 </body>
 </html> 
