--- a/pictures.html
+++ b/pictures.html
@@ -11,7 +11,7 @@ s<!DOCTYPE html>
 	<div id="wrapper">
 
 	<div id="header">
-		<h1>These are some of our designs</h1>
+		<h1>These are some of our designs</h1>	
 	</div> <!--closes header -->
 	<hr>
 
@@ -20,19 +20,19 @@ s<!DOCTYPE html>
 		<a href="prices.html"> Cake Pricing</a> |
 		<a href="designs.html"> Design Your Cake</a> |
 		<a href="pictures.html"> Designs</a> |
-		<a href="mailto:"> Eamil us</a> |
-		<a href="tel:+14083829733"> Phone</a> |
+		<a href="mailto:angelbakery03@gmail.com"> Eamil us</a> |
+		<a href="tel:+14085948852"> Phone</a> |
 		<a href="https://www.facebook.com/angelscakes33/" target="_blank" title="check our the facebook page"> Facebook</a> |
 		<a href="https://www.youtube.com/channel/UCoWCyywy2edneSz54sTQEmQ" target="_blank" title="check out my youtube channel for tutorials"> Youtube</a> 
 
 		<hr>
 	</div> <!--closes nav -->
 
-	<div id="sidebar"><p>The Cakes shown in this Page are all my creations, I hope you enjoy the view as much as we do and I hope that you guys are able to enjoy this. every cake comes from a really nice idea from both parts, the customer and myself. they come up with the idea and I try to suggest something I believe can play along and nice with their ideas </p>
+	<div id="sidebar"><p>The Cakes shown in this Page are all my creations, I hope you enjoy the view as much as we do and I hope that you guys are able to enjoy this. Every cake comes from a really nice idea from both parts, the customer and myself. they come up with the idea and I try to suggest something I believe can play along and nice with their ideas </p>
 
-	<p>Every cake shown in these pictures has a special occassion, every person has chosen Angels Cakes beacause a family member reccomended it, or because ther Checked us out in <a href="https://www.facebook.com/angelscakes33/">Facebook</a> 	  </p>
-    <p>Cras ac arcu et dolor elementum consequat. Ut aliquet rhoncus ipsum. Proin   tincidunt, pede sed adipiscing imperdiet, risus augue mollis tortor, eu   ullamcorper erat dui sit amet arcu. Quisque ac lectus. Nulla accumsan posuere   enim. Etiam a risus. Vivamus orci turpis, tempus commodo, condimentum vitae,   mattis at, est. Morbi nonummy pellentesque erat. Nullam malesuada tellus vel   massa. Curabitur eu nisl. Nullam mattis elit at elit. Phasellus adipiscing.   Curabitur et elit. Curabitur tempus. Suspendisse dapibus tincidunt mi. Nulla   rhoncus. </p>
-    <p>Nunc eu tortor at dui convallis semper. In eget justo eget massa euismod   commodo. Ut imperdiet. Nulla condimentum, arcu eget tristique varius, neque   lorem tincidunt nisl, vel cursus purus enim at ante. Proin vulputate, libero et   eleifend ornare, purus felis faucibus tortor, id tincidunt nisl lorem eget nisl.   Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus   mus. Duis blandit, quam id feugiat porta, diam eros dapibus neque, eget   elementum ante leo ut metus. Suspendisse id lectus. Mauris non massa. Sed ante   nisi, placerat vel, posuere id, pellentesque ut, neque. Donec pretium, tellus ac   porta dignissim, turpis tortor ultricies sapien </p>
+	<p>Every cake shown in these pictures has a special occassion, every person has chosen Angels Cakes beacause a family member reccomended it, or because they Checked us out in <a href="https://www.facebook.com/angelscakes33/">Facebook</a> 	  </p>
+    <p>We value trust; therefore, we put all the effort possible to make every cake a masterpiece. Not only that, I also offer tutorials to people who might be interested in making their own cakes, beacuse with the current situation we have got to reinvent ourselves and be creative, or perhaps rediscover new talents we didn't know we had. I offer my tutorials in my Youtube Channel for anyone interested </p>
+    <p>Check out these designs and if you have something special you would like done, head over to our <a href="designs.html"> designs page</a> that way you can tells us what is your favorite base, toppings and fillings for the special occassion and the special cake you are looking for.</p>
 	</div> <!--closes sidebar -->
 	
 	<div id="content" class="floatleft">
@@ -41,10 +41,10 @@ s<!DOCTYPE html>
 	<ul>
 		<li>Marshmallow Man cake <br> <img src="cakes-pics/marshmallow.jpg" alt="square cake"> <br><br></li>
 
-		<li>Fortnite Cakes <br> <img src="cakes-pics/knight.jpg" alt="fortnite knight sugar paper, airbtushed"> <br> <br> </li>
+		<li>Fortnite Cakes <br> <img src="cakes-pics/knight.jpg" alt="fortnite knight sugar paper, airbrushed"> <br> <br> </li>
 
-		<li>Handmade Cake designs <br> <img src="cakes-pics/snap.jpg" alt="snapchat ghost shaped cake"> <br><br>  <img src="cakes/bat.jpg" alt="batman cake design with a green surrounding"> <br><br>  <img src="cakes-pics/bass.jpg" alt="bass cake with green, white, and light blue colors"> <br> <br> </li>
-		<li>We Can Also do Crazy Designs to suit your needs <br><br> <img src="cakes-pics/modelo.jpg" alt="modelo beer bucket cake with beer on top"> <br><br>  <img src="cakes/highheel.jpg" alt="high heel made of chocolate with a cake red and white in the bottom"> <br><br></li>
+		<li>Handmade Cake designs <br> <img src="cakes-pics/snap.jpg" alt="snapchat ghost shaped cake"> <br><br>  <img src="cakes-pics/bat.jpg" alt="batman cake design with a green surrounding"> <br><br>  <img src="cakes-pics/bass.jpg" alt="bass cake with green, white, and light blue colors"> <br> <br> </li>
+		<li>We Can Also do Crazy Designs to suit your needs <br><br> <img src="cakes-pics/modelo.jpg" alt="modelo beer bucket cake with beer on top"> <br><br>  <img src="cakes-pics/highheel.jpg" alt="high heel made of chocolate with a cake red and white in the bottom"> <br><br></li>
 	</ul>
 	
 	<h3>We Also Specialize in Jellos for those Special days</h3>
