--- a/prices.html
+++ b/prices.html
@@ -20,8 +20,8 @@
 				<a href="prices.html"> Cake Pricing</a> |
 				<a href="designs.html"> Design Your Cake</a> |
 				<a href="pictures.html"> Designs</a> |
-				<a href="mailto:"> Eamil us</a> |
-				<a href="tel:+14083829733"> Phone</a> |
+				<a href="mailto:angelbakery03@gmail.com"> Eamil us</a> |
+				<a href="tel:+14085948852"> Phone</a> |
 				<a href="https://www.facebook.com/angelscakes33/" target="_blank" title="check our the facebook page"> Facebook</a> |
 				<a href="https://www.youtube.com/channel/UCoWCyywy2edneSz54sTQEmQ" target="_blank" title="check out my youtube channel for tutorials"> Youtube</a> 
 	</div> <!--closes nav id -->
